; ModuleID = '/home/carl/AnghaBench/openssl/crypto/x509/extr_v3_conf.c_X509V3_EXT_nconf.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/x509/extr_v3_conf.c_X509V3_EXT_nconf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@X509V3_F_X509V3_EXT_NCONF = common dso_local global i32 0, align 4
@X509V3_R_ERROR_IN_EXTENSION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"name=\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c", value=\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @X509V3_EXT_nconf(i32* %0, i32* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  %13 = call i32 @v3_check_critical(i8** %9)
  store i32 %13, i32* %10, align 4
  %14 = call i32 @v3_check_generic(i8** %9)
  store i32 %14, i32* %11, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %23

16:                                               ; preds = %4
  %17 = load i8*, i8** %8, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = load i32, i32* %10, align 4
  %20 = load i32, i32* %11, align 4
  %21 = load i32*, i32** %7, align 8
  %22 = call i32* @v3_generic_extension(i8* %17, i8* %18, i32 %19, i32 %20, i32* %21)
  store i32* %22, i32** %5, align 8
  br label %42

23:                                               ; preds = %4
  %24 = load i32*, i32** %6, align 8
  %25 = load i32*, i32** %7, align 8
  %26 = load i8*, i8** %8, align 8
  %27 = call i32 @OBJ_sn2nid(i8* %26)
  %28 = load i32, i32* %10, align 4
  %29 = load i8*, i8** %9, align 8
  %30 = call i32* @do_ext_nconf(i32* %24, i32* %25, i32 %27, i32 %28, i8* %29)
  store i32* %30, i32** %12, align 8
  %31 = load i32*, i32** %12, align 8
  %32 = icmp ne i32* %31, null
  br i1 %32, label %40, label %33

33:                                               ; preds = %23
  %34 = load i32, i32* @X509V3_F_X509V3_EXT_NCONF, align 4
  %35 = load i32, i32* @X509V3_R_ERROR_IN_EXTENSION, align 4
  %36 = call i32 @X509V3err(i32 %34, i32 %35)
  %37 = load i8*, i8** %8, align 8
  %38 = load i8*, i8** %9, align 8
  %39 = call i32 @ERR_add_error_data(i32 4, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* %37, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* %38)
  br label %40

40:                                               ; preds = %33, %23
  %41 = load i32*, i32** %12, align 8
  store i32* %41, i32** %5, align 8
  br label %42

42:                                               ; preds = %40, %16
  %43 = load i32*, i32** %5, align 8
  ret i32* %43
}

declare dso_local i32 @v3_check_critical(i8**) #1

declare dso_local i32 @v3_check_generic(i8**) #1

declare dso_local i32* @v3_generic_extension(i8*, i8*, i32, i32, i32*) #1

declare dso_local i32* @do_ext_nconf(i32*, i32*, i32, i32, i8*) #1

declare dso_local i32 @OBJ_sn2nid(i8*) #1

declare dso_local i32 @X509V3err(i32, i32) #1

declare dso_local i32 @ERR_add_error_data(i32, i8*, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
